--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.5.5",
-    "@videojs/http-streaming": "1.11.2",
+    "@videojs/http-streaming": "git+https://github.com/kkimu/http-streaming.git",
     "@videojs/xhr": "2.5.1",
     "global": "4.3.2",
     "keycode": "^2.2.0",
