--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.4.5",
-    "@videojs/http-streaming": "1.10.6",
+    "@videojs/http-streaming": "git+https://github.com/kkimu/http-streaming.git#test",
     "global": "4.3.2",
     "keycode": "^2.2.0",
     "safe-json-parse": "4.0.0",
